# AskDocs-server

./: Dockerfile  README.md  auth.py  database.py  docker-compose.yml  main.py  pyproject.toml
evaluation/datasets/: ragas_evaluation_dataset-1.json  results.csv
evaluation/scripts/: data_collection.py  run_evaluation.py
notebooks/: simple_agent.ipynb
routes/: projects.py  users.py
src/: server.py
src/config/: index.py
src/models/: index.py
src/rag/ingestion/: index.py
src/rag/retrieval/: index.py
src/routes/: projectRoutes.py
src/services/: llm.py  webScrapper.py
