[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
package-mode = false
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "supabase (>=2.28.0,<3.0.0)",
    "clerk-backend-api (>=5.0.2,<6.0.0)",
    "boto3 (>=1.42.59,<2.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.3.0,<8.0.0)",
    "langchain (==1.0.8)",
    "langchain-community (==0.4.1)",
    "langchain-openai (==1.0.3)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "nltk (>=3.9.3,<4.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "firecrawl (>=4.19.0,<5.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "ddgs (==9.9.1)",
    "langchain-tavily (==0.2.13)",
    "ragas (>=0.4.3,<0.5.0)",
    "openai (>=2.29.0,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "unstructured[all-docs] (==0.18.11)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
